--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@
   }
   
   .btn-primary {
-    background-color: #0b7000;
+    background-color: #ff6b6b;
     color: white;
     transform: scale(1);
   }
