--- a/styles/landing_styles.css
+++ b/styles/landing_styles.css
@@ -148,17 +148,26 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px; /* Adjust gap between name and role */
+  gap: 10px; 
 }
 
 .card img {
   width: 100px;
   height: 100px;
+  display: flex;
   border-radius: 50%;
   margin-bottom: 15px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s, box-shadow 0.3s;
 }
 
-/* Join the Waitlist Button */
+.card:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
+}
+
+
+/* Waitlist Button */
 .btn-primary {
   background-color: #187045;
   color: white;
