--- a/styles/login.css
+++ b/styles/login.css
@@ -29,6 +29,7 @@ h2{
   justify-content: space-between;
   align-items: center;
   padding: 20px 40px;
+  margin-bottom: 50px;
   background-color: #fff;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
@@ -108,12 +109,12 @@ input[type="submit"] {
   border-radius: 5px;
   font-size: 18px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  transition: all 0.3s ease-in-out;
 }
 
 input[type="submit"]:hover {
   background-color: #044B85;
-  transition: background-color 0.3s ease;
+  transform: scale(1.05);
 }
 
 footer {
