--- a/styles/login.css
+++ b/styles/login.css
@@ -11,8 +11,8 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background-image: url('../imgs/bgimg1.png'); 
-    background-size: cover;
+    background-image: url('../imgs/wheat.png'); 
+
   }
 
 h2{
