--- a/styles/waitlist.css
+++ b/styles/waitlist.css
@@ -21,6 +21,8 @@ body {
   
   .waitlist-logo {
     text-align: center;
+    margin-top: 150px;
+    margin-bottom: 20px;
   }
   
   .waitlist-logo img {
