--- a/styles/teacher_dashboard.css
+++ b/styles/teacher_dashboard.css
@@ -86,6 +86,10 @@ body {
     margin-bottom: 1.5rem;
 }
 
+.welcome-section p{
+    font-size: 1.25rem;
+}
+
 .welcome-content {
     display: flex;
     justify-content: space-between;
@@ -110,9 +114,10 @@ body {
 
 .welcome-image img {
     max-width: 100%;
-    height: auto;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    height: 300px;
+    /* object-fit: fill; */
+    object-fit: contain;
+    margin-bottom: 20px;
 }
 
 .published-quizzes h2 {
@@ -125,7 +130,7 @@ body {
     flex-direction: column;
     gap: 1.5rem;
 }
-
+/* 
 .quiz-item {
     display: flex;
     justify-content: space-between;
@@ -135,7 +140,31 @@ body {
     border-radius: 10px;
     border: 1px solid #ddd;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-}
+} */
+
+.quiz-item-link {
+    text-decoration: none;
+    display: block; /* Ensure the link covers the entire div */
+    color: inherit; /* Inherit text color */
+  }
+  
+  .quiz-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1.2rem 2rem;
+    background-color: var(--color-light);
+    border-radius: 10px;
+    border: 1px solid #ddd;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+  
+  .quiz-item:hover {
+    transform: scale(1.02);
+    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.15);
+  }
+  
 
 .quiz-title {
     font-size: 1.2rem;
